# RuleNavi

./: .gitignore  README.md  __todo__.xlsx  pyproject.toml  setting.csv  setting_key.py  step0_b00_sqlite_install.bat  step1_ALLl.bat  step1_p00_check_excel.py  step1_p01_import_excel_to_sqlite.py  step1_p02_check_db.py  step2_p00_make_directory_rules.py  sub_step1_b00_check_excel.bat  sub_step1_b01_import_excel_to_sqlite.bat  sub_step1_b02_check_db.bat
resource/: rules_db.xlsx
rules/: rules.db
scripts/: step1_p00_check_excel.py  step1_p01_import_excel_to_sqlite.py  step1_p02_check_db.py  step2_p00_make_directory_rules.py  step2_p01_dump_category_tree.py  step2_p02_export_tree_json.py  step2_p03_export_rules_index.py  step2_p04_export_markdown_rules.py  step2_p05_make_site_stub.py
src/: read_setting.py  setting_helper.py  setting_key.py  textio.py
src/rulenavi/: __init__.py  __main__.py  cli.py
src/rulenavi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sitegen/: assets.py  cli.py  data.py  logger.py  pages.py  (+2 more)
tools/: 0_CLEAR.bat  0_INIT.bat  1_RUN_ALL.bat  2_SEARCH_FILE.bat  9_DEVELOPMENT.bat  step0_b00_sqlite_install.bat  step1_ALLl.bat  step2_ALLl.bat  sub_run_script.bat  sub_step1_b00_check_excel.bat  sub_step1_b01_import_excel_to_sqlite.bat  sub_step1_b02_check_db.bat  sub_step2_p00_make_directory_rules.bat  sub_step2_p01_dump_category_tree.bat  sub_step2_p02_export_tree_json.bat  sub_step2_p03_export_rules_index.bat  sub_step2_p04_export_markdown_rules.bat  sub_step2_p05_make_site_stub.bat
utility/: read_setting.py
(+9 files in other folders)
